// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`itemMap should render a apple icon 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      aria-label="Apple"
      class=""
      data-mui-internal-clone-element="true"
    >
      <a
        aria-label="Apple"
        href="https://apple.com"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1eq57b1-MuiSvgIcon-root"
          data-testid="AppleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"
          />
        </svg>
      </a>
    </span>
  </div>
</DocumentFragment>
`;

exports[`itemMap should render a docs icon 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      aria-label="Docs"
      class=""
      data-mui-internal-clone-element="true"
    >
      <a
        aria-label="Blog"
        href="https://docs.com"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1mgjksc-MuiSvgIcon-root"
          data-testid="DocumentScannerOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 3H4v3H2V1h5zm15 3V1h-5v2h3v3zM7 21H4v-3H2v5h5zm13-3v3h-3v2h5v-5zM17 6H7v12h10zm2 12c0 1.1-.9 2-2 2H7c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2zM15 8H9v2h6zm0 3H9v2h6zm0 3H9v2h6z"
          />
        </svg>
      </a>
    </span>
  </div>
</DocumentFragment>
`;

exports[`itemMap should render a github icon 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      aria-label="Github"
      class=""
      data-mui-internal-clone-element="true"
    >
      <a
        aria-label="Github"
        href="https://github.com"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rbqpd8-MuiSvgIcon-root"
          data-testid="GitHubIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 1.27a11 11 0 00-3.48 21.46c.55.09.73-.28.73-.55v-1.84c-3.03.64-3.67-1.46-3.67-1.46-.55-1.29-1.28-1.65-1.28-1.65-.92-.65.1-.65.1-.65 1.1 0 1.73 1.1 1.73 1.1.92 1.65 2.57 1.2 3.21.92a2 2 0 01.64-1.47c-2.47-.27-5.04-1.19-5.04-5.5 0-1.1.46-2.1 1.2-2.84a3.76 3.76 0 010-2.93s.91-.28 3.11 1.1c1.8-.49 3.7-.49 5.5 0 2.1-1.38 3.02-1.1 3.02-1.1a3.76 3.76 0 010 2.93c.83.74 1.2 1.74 1.2 2.94 0 4.21-2.57 5.13-5.04 5.4.45.37.82.92.82 2.02v3.03c0 .27.1.64.73.55A11 11 0 0012 1.27"
          />
        </svg>
      </a>
    </span>
  </div>
</DocumentFragment>
`;

exports[`itemMap should render a google icon 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      aria-label="Google"
      class=""
      data-mui-internal-clone-element="true"
    >
      <a
        aria-label="Google"
        href="https://google.com"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1mgjksc-MuiSvgIcon-root"
          data-testid="GoogleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.545,10.239v3.821h5.445c-0.712,2.315-2.647,3.972-5.445,3.972c-3.332,0-6.033-2.701-6.033-6.032s2.701-6.032,6.033-6.032c1.498,0,2.866,0.549,3.921,1.453l2.814-2.814C17.503,2.988,15.139,2,12.545,2C7.021,2,2.543,6.477,2.543,12s4.478,10,10.002,10c8.396,0,10.249-7.85,9.426-11.748L12.545,10.239z"
          />
        </svg>
      </a>
    </span>
  </div>
</DocumentFragment>
`;

exports[`itemMap should render a link icon 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      aria-label="Link"
      class=""
      data-mui-internal-clone-element="true"
    >
      <a
        aria-label="Link"
        href="https://google.com"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1mgjksc-MuiSvgIcon-root"
          data-testid="LinkIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1M8 13h8v-2H8zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5"
          />
        </svg>
      </a>
    </span>
  </div>
</DocumentFragment>
`;

exports[`itemMap should render a linkedin icon 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      aria-label="LinkedIn"
      class=""
      data-mui-internal-clone-element="true"
    >
      <a
        aria-label="LinkedIn"
        href="https://linkedin.com"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-185ufmo-MuiSvgIcon-root"
          data-testid="LinkedInIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"
          />
        </svg>
      </a>
    </span>
  </div>
</DocumentFragment>
`;

exports[`itemMap should render a youtube icon 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      aria-label="YouTube"
      class=""
      data-mui-internal-clone-element="true"
    >
      <a
        aria-label="Youtube"
        href="https://youtube.com"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-w1n8og-MuiSvgIcon-root"
          data-testid="YouTubeIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 15l5.19-3L10 9v6m11.56-7.83c.13.47.22 1.1.28 1.9.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83-.25.9-.83 1.48-1.73 1.73-.47.13-1.33.22-2.65.28-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44-.9-.25-1.48-.83-1.73-1.73-.13-.47-.22-1.1-.28-1.9-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83.25-.9.83-1.48 1.73-1.73.47-.13 1.33-.22 2.65-.28 1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44.9.25 1.48.83 1.73 1.73z"
          />
        </svg>
      </a>
    </span>
  </div>
</DocumentFragment>
`;
